fix spacing of options

--- a/styles/site.less
+++ b/styles/site.less
@@ -96,7 +96,18 @@ button {
   margin: 0px;
   padding: 0px;
   & > * {
-    margin: 5px;
+    @media (max-width: 700px) {
+      margin-left: 5px;
+      margin-right: 5px;
+    }
+    @media (min-width: 700px) {
+      margin-left: 70px;
+      margin-right: 70px;
+    }
+    @media (max-width: 1200px) {
+      margin-left: 30px;
+      margin-right: 30px;
+    }
   }
 }
 
